fix: spacing

--- a/deploy/styles.css
+++ b/deploy/styles.css
@@ -35,7 +35,6 @@ html{scroll-behavior:smooth}
 .col-1-3{width: 100%;}
 
 .hidden,
-.cookie-policy-consents-area input,
 #cart .NumberProduct_Basket,
 #cart #viewbasket,
 #ProductMenu_List #ActiveCategory_A,
@@ -59,7 +58,7 @@ div.CookiePolicyText{display:flex;padding:0 10px;flex-direction:column;text-alig
 .cookie-policy-details-link-container{order:3;padding:0 0 15px}
 .cookie-policy-details-container{order:4;display:none;overflow:auto;max-height:400px;margin-bottom: 20px;}
 .cookie-policy-accept-buttons-container{display:flex;justify-content:center;flex-wrap:wrap;}
-.cookie-policy-button{border:none;border-radius:40px;font-size:17px;cursor:pointer;flex:0 1 389px;padding:16px;margin: 5px;}
+.cookie-policy-button{border:none;border-radius:40px;font-size:17px;cursor:pointer;flex:0 1 329px;padding:14px;margin: 5px;}
 .cookie-policy-accept{background-color:#fff;border:solid 1px #d0d0d0;}
 .cookie-policy-accept-all{background-color:#78BD3F;color:#fff;}
 
@@ -393,7 +392,7 @@ footer #copyright #rights{margin:20px 0 0;color:#444;font-size:13px}
 
 @media screen and (min-width: 800px) { 
 div#CookiePolicy{background-color: #f2f2f2; max-height: 90%;height: auto;box-shadow: 0 0 10px #ccc;}
-div.CookiePolicyCenterText {margin: 10px auto 20px;padding: 0;box-shadow: none;}
+div.CookiePolicyCenterText {margin: 10px auto 0;padding: 0;box-shadow: none;}
 
 header > div {border-bottom: 1px solid #d0d0d0;}
 .headerBar {display:block; border-bottom: 1px solid #d0d0d0}
